# ClaudeCode-DevPlanBuilder

./: .gitignore  .pre-commit-config.yaml  AGENT_INFRASTRUCTURE.md  DEVELOPMENT_PLAN.md  LICENSE  MULTI_AGENT_INFRASTRUCTURE.md  PROJECT_BRIEF.md  PROMPT_SEQUENCE.md  README.md  claude.md  pyproject.toml  requirements-dev.txt  setup.md
.claude/agents/: plan-executor.md
.github/workflows/: interaction-limits.yml  notify-mcp-server.yml  test.yml
claude_planner/: __init__.py  cli.py  models.py
claude_planner/generator/: __init__.py  brief_converter.py  brief_extractor.py  brief_parser.py  parser.py  phase_gen.py  plan_generator.py  renderer.py  subtask_gen.py  task_gen.py  tech_stack_gen.py
claude_planner/templates/: __init__.py  selector.py
claude_planner/templates/api/: agent.md.j2  claude.md.j2  config.yaml  plan.md.j2
claude_planner/templates/base/: agent.md.j2  claude.md.j2  config.yaml  plan.md.j2
claude_planner/templates/cli/: agent.md.j2  claude.md.j2  config.yaml  plan.md.j2
claude_planner/templates/web-app/: agent.md.j2  claude.md.j2  config.yaml  plan.md.j2
claude_planner/utils/: __init__.py
claude_planner/validator/: __init__.py
docs/: AUTONOMOUS_EXECUTION.md  BEST_PRACTICES.md  ERROR_RECOVERY.md  EXECUTOR_AGENT.md  HAIKU_EXECUTABLE_PLANS.md  LESSONS_LEARNED.md  REMEDIATION_WORKFLOW.md  SCREENCAST_SCRIPT.md  VERIFIER_AGENT.md
examples/: GLOBAL_LESSONS.md
examples/data-validator/: CLAUDE.md  DEVELOPMENT_PLAN.md  PROJECT_BRIEF.md  data-validator-executor.md  data-validator-verifier.md
examples/hello-cli/: CLAUDE.md  DEVELOPMENT_PLAN.md  PROJECT_BRIEF.md  hello-cli-executor.md  hello-cli-verifier.md
examples/pomo-tui/: PROJECT_BRIEF.md
examples/remediation/: APPENDED_PLAN_EXAMPLE.md  REMEDIATION_PLAN.md
examples/todo-api/: CLAUDE.md  DEVELOPMENT_PLAN.md  PROJECT_BRIEF.md  todo-api-executor.md  todo-api-verifier.md
examples/user-dashboard/: CLAUDE.md  DEVELOPMENT_PLAN.md  PROJECT_BRIEF.md  user-dashboard-executor.md  user-dashboard-verifier.md
mcp/spec/plans/: plan.md  requirements.md
mcp/spec/src/devplan_mcp/: server.py
tests/: __init__.py  test_api_template.py  test_brief_converter.py  test_brief_extractor.py  test_brief_parser.py  test_claude_template.py  test_cli.py  test_cli_template.py  test_models.py  test_parser.py  test_phase_gen.py  test_plan_generator.py  test_plan_template.py  test_renderer.py  test_selector.py  test_subtask_gen.py  test_task_gen.py  test_tech_stack_gen.py  test_web_app_template.py
